craete main page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
 
     <!--main-->
     <string name="main_navigation_my_posts">我的帖子</string>
+    <string name="main_navigation_my_comment">我的评论</string>
+    <string name="main_navigation_my_share">我的分享</string>
+    <string name="main_navigation_my_collection">我的收藏</string>
+    <string name="main_navigation_about_me">关于我们</string>
+    <string name="main_navigation_settings">软件设置</string>
     <string name="main_toolbar_search">search</string>
     <string name="main_toolbar_settings">settings</string>
     <string name="main_toolbar_message">message</string>
